// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render should render AddTaskModal 1`] = `
<Modal
  appElement={null}
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  className="task-modal"
  closeTimeoutMS={200}
  contentLabel="Add Task"
  isOpen={true}
  onRequestClose={[MockFunction]}
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  role="dialog"
  shouldCloseOnEsc={true}
  shouldCloseOnOverlayClick={true}
  shouldFocusAfterRender={true}
  shouldReturnFocusAfterClose={true}
>
  <h1>
    Add Task
  </h1>
  <TaskForm
    onRequestClose={[MockFunction]}
    submitTask={[Function]}
  />
</Modal>
`;

exports[`render should render AddTaskModal for group 1`] = `
<Modal
  appElement={null}
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  className="task-modal"
  closeTimeoutMS={200}
  contentLabel="Add Task"
  isOpen={true}
  onRequestClose={[MockFunction]}
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  role="dialog"
  shouldCloseOnEsc={true}
  shouldCloseOnOverlayClick={true}
  shouldFocusAfterRender={true}
  shouldReturnFocusAfterClose={true}
>
  <h1>
    Add Task
  </h1>
  <TaskForm
    gid="testgid"
    groupModule="CS1231S"
    onRequestClose={[MockFunction]}
    submitTask={[Function]}
    users={
      Array [
        Object {
          "admin": true,
          "displayName": "Robert",
          "studentNum": "A0123456A",
          "uid": "testuid",
        },
        Object {
          "admin": false,
          "displayName": "Peter",
          "studentNum": "A0000000A",
          "uid": "testuid2",
        },
      ]
    }
  />
</Modal>
`;
